Background Jump While Fast Scroll FIX

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -74,7 +74,7 @@
     }
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1500px) {
     .header {
         flex-direction: column;
         align-items: center;
